<resources>
    <string name="app_name">RunningApp</string>
    <string-array name="filter_options">
        <item>Date</item>
        <item>Running Time</item>
        <item>Distance</item>
        <item>Average Speed</item>
        <item>Calories Burned</item>
    </string-array>
    <string name="Language">Language</string>
    <string name="English">English</string>
    <string name="Spanish">Spanish</string>
    <string name="Mode">Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="default_mode">Default</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="your_weight">Your Weight</string>
    <string name="your_name">Your Name</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">API KEY HERE</string>
    <string name="fineLocDialogTest">This app requires access to PRECISE location in order to work.
        \nPress \'Allow\' to give access.</string>
    <string name="bgLocDialogText">This app also requires location access at all times in order to track your run.
        \nTo give access, press \'Allow\' and on the following screen, choose \'Allow all the time.\'</string>
    <string name="permissionDialogPos">Allow</string>
    <string name="dialogCancel">Cancel</string>
    <string name="permissionDialogDeniedText">Required Location permissions were not granted. The run location will not be tracked</string>
    <string name="permissionDialogDeniedNeg">Ok</string>
    <string name="locServiceDialogText">Location is currently turned off. Turn on location services to track your run.</string>
    <string name="startRun">Start Run</string>
    <string name="finish_run">Finish run</string>
    <string name="start">Start</string>
    <string name="zero_time_short">00:00:00</string>
    <string name="total_distance">Total Distance</string>
    <string name="running_app">Running App</string>
    <string name="sort_by">Sort by:</string>
    <string name="continued">Continue</string>
    <string name="kg">kg</string>
    <string name="welcome_nplease_enter_your_name_and_weight">Welcome!\nPlease enter your name and weight.</string>
    <string name="_0km">0km</string>
    <string name="total_time">Total Time</string>
    <string name="total_calories_burned">Total Calories Burned</string>
    <string name="_0kcal">0kcal</string>
    <string name="average_speed">Average Speed</string>
    <string name="_0km_h">0km/h</string>
    <string name="zero_time_long">00:00:00:00</string>
    <string name="let_s_go_username">Let\'s go, USERNAME!</string>
    <string name="calories">CALORIES</string>
    <string name="avgspeed">AVGSPEED</string>
    <string name="distance">DISTANCE</string>
    <string name="time">TIME</string>
    <string name="date">DATE</string>
    <string name="hi">hi</string>
    <string name="colorPickerTitle">Custom Chart Color</string>
    <string name="colorPickerName">ChartColor</string>
    <string name="colorPickerPos">Select</string>
    <string name="colorChange">Change</string>
    <string name="chartSettingTitle">Chart Color</string>
    <string name="custom_color_mode">Custom Color</string>
    <string name="customColorLabel">Custom\nChart Color</string>
    <string name="bar_color_label">Bar Color\n(Auto-Generated)</string>
    <string name="confirmDelete">Are You Sure you Wish to Delete?</string>
    <string name="contentDes">Runner Detailed Image</string>
    <string name="deleteRun">Delete Run</string>
    <string name="cancel">Cancel</string>
    <string name="confirmSelect">confirm selection</string>
    <string name="dateFormat">MM/dd/yyyy</string>
    <string name="back">Back</string>
    <string name="calories_burned">CALORIES BURNED</string>
    <string name="avg_speed">AVG SPEED</string>
    <string name="duration">DURATION</string>
    <string name="settings">Settings</string>
    <string name="statistics">Statistics</string>
    <string name="your_runs">Your Runs</string>
    <string name="cancel_run">Cancel Run</string>
    <string name="delete_all_runs">Delete All Runs</string>
    <string name="are_you_sure_you_want_to_delete_all_runs">Are you sure you want to delete all runs?</string>
    <string name="delete">Delete</string>
</resources>
